--- a/cloudtype.yml
+++ b/cloudtype.yml
@@ -2,13 +2,13 @@ name: the-listen-integrated
 region: seoul
 
 app:
-  name: the-listen-integrated
-  platform: node
+  type: node
   build:
     commands:
       - npm install
   start:
     command: npm run start
+
     env:
       EXPO_PUBLIC_KAKAO_JS_KEY: 카카오_JavaScript_키
       EXPO_PUBLIC_KAKAO_REST_KEY: 카카오_REST_API_키
