--- a/cloudtype.yml
+++ b/cloudtype.yml
@@ -3,7 +3,7 @@ app:
   name: the-listen-integrated-deploy
   type: node
   build:
-    commands:
+    install:
       - npm install
   run:
     command: node index.js
